<resources>
    <string name="app_name">CurriculumKevinMaggio</string>
    <string name="librerias_y_tecnologias">Librerias y tecnologias</string>
    <string name="contacto">Contacto</string>
    <string name="solicitar_entrevista">solicitar entrevista</string>
    <string name="quien_soy">Quien Soy</string>
    <string name="reparacion_de_computadoras">Reparacion de computadoras</string>
    <string name="experiencia_obtenida">experiencia Obtenida:</string>
    <string name="ventas_cencosud_del_2013_2021">Ventas: Cencosud del 2013/2021</string>
    <string name="alkemy_aceleracion">Alkemy: Aceleracion</string>
    <string name="experiencia_laboral">Experiencia Laboral</string>
    <string name="experiencia_alkmey_cuerpo">Durante la experiencia contamos con 2 estapas. donde fuimos aprendiendo distintas cosas. comenzando con el lenguaje Kotlin y sus ventajas. vimos cosas como Las Acquitecturas. MVVM MVP y MVC.\n var y val, if for while when , array, colecciones, try catch, expresiones lamda y demas\n al finaliza la segunda semana nos encontramos con un Challeng en el cual teniamos que organizar un parking con el tipo de vehiculo que ingresa, sus gastos, entradas y salidas.\n\n Llegado el momento de la aceleracion comenzamos a trabajar en equipo. aplicando la metodologia Scrum y Git. \n La App a crear era para la ONG SOMOSMAS, esta contaba con diseños dedicados, implementacion de librerias como Hilt, Retrofit, RecyclerView, Picasso, FireBase... \n Pasada la experiencia puedo decir que guardo en mi saber un monton de buenas practicas, Clean Code, trabajo en equipo, nuevas metas y por sobre todo muchisimo aprendisaje</string>
    <string name="experiencia_alkmey_titulo">Experiencia Alkmey</string>
    <string name="experiencia_cencosud_cuerpo">Cencosud. de las experiencias mas grandes en mi vida.. \n inicie mi carrera con 22 años en el año 2013, Easy (San Justo) con un turno PartTime en el sector de Electricidad encargado de la reposicion y atencion al publico\n A los 4 años dentro de la empresa fui ascendido a FullTime, junto a eso inicie una serie de pacacitaciones en distintas areas, manejo de Clark, manejo de Rich, manejo de cierra industril para corte de maderas y Cajero\n\n Sin darme cuenta recorri muchisimos sectores de la empresa, aprendiendo muchisimo de cada una, electricidad, ferreteria, iluminacion, baños y cocinas, plomeria, ceramicos, construcciones, jardineria, y corte de maderas. \n llevo grandes recuerdos como la calides de los compañeros. no asi la de los superiores. (ya que el mal clima laboral saturo mi estado a nivel de replantearme mi verdadera profesion)\n en el año 2021 decidi tomarme un retiro voluntario para buscar el sueño de ser un programador</string>
    <string name="experiencia_reparacion_cuerpo">En el rubro de mantenimiento en Pc Comenze a los 17 mientras terminaba la secundaria Tecnica.\n De una forma ruda comprendi que llevar un negocio sin tener experiencia no es nada facil... \n la calidad con los empleados, la reponsabilidad, la credibilidad, el amplio conocimiento para solucionar cada problema que se oresente, no son cosas con las que se nace, ni tampoco se aprenden en la escuela, asi q al pasar los años podria decir que la profesion me lleno de responsabilidad y experiencia</string>
    <string name="quien_soy_cuerpo">Hola, me llamo Kevin Maggio, tengo 30 años y soy de zona sur. complete mis estudios secundarios en la E.E.T.N.1 con orientacion a informatica\n por temas economicos me incline a un mundo laboral en el rubro de comercio. me case a los 21 años con mi actual compañera, tengo un hijo llamado Dylan, quien va a segundo grado en el colegio IntyHuasi\n hace 5 meses decidi buscar mi verdadera profesion y deje mi largo recorrido en cencosud. \n la decision fue dificil ya que la economia no ayuda en lo mas minimo pero aun asi con el apoyo de mi familia se comenzo el viaje, actualmente (5 meses despues) me siento preparado luego de casi 2 años de preparacion para integrarme en el mercado. \n puedo decir que las cosas no fueron faciles y que cada decicion que tome en mi vida afecta a dos personas mas que tengo conmigo, pero tanto los riesgos como los veneficios van a ser para toda la familia. y los sueños nunca se deben postergar</string>
</resources>